[metadata]
name = pytorch-datastream
author = "Aiwizo"
author-email = richard@aiwizo.com
summary = Simple dataset to dataloader library for pytorch
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
project_urls =
    Source Code = https://github.com/aiwizo/pytorch-datastream/
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords =
    pytorch

[files]
packages =
    datastream

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[options]
python_requires = >=3.6, <3.9
setup_requires =
    setuptools

[bdist_wheel]

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1
