[metadata]
name = pytorch-datastream
author = "Aiwizo"
author-email = richard@aiwizo.com
summary = Simple dataset to dataloader library for pytorch
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/aiwizo/pytorch-datastream
project_urls =
    Source Code = https://github.com/aiwizo/pytorch-datastream
    Bug Tracker = https://github.com/aiwizo/pytorch-datastream/issues
license = Apache-2
license_files = LICENSE
platforms =
    Linux
    Darwin
classifier =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    pytorch
    torch
    dataset
    dataloader
    machine
    learning

[files]
packages =
    datastream

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[options]
python_requires = >=3.6
setup_requires =
    setuptools

[bdist_wheel]

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1
